Update dependencies & do not use preview features